[gd_scene load_steps=4 format=3 uid="uid://kh5x4d2lti7e"]

[ext_resource type="Script" uid="uid://1rfgkdlb80wg" path="res://scenes/ui/health_ui.gd" id="1_6rypn"]
[ext_resource type="Texture2D" uid="uid://d0edy7thj8ce6" path="res://art/heart.png" id="1_hdb0t"]
[ext_resource type="Theme" uid="uid://c3anpexwnb0eu" path="res://main_theme.tres" id="3_fht25"]

[node name="HealthUI" type="HBoxContainer"]
theme_override_constants/separation = 2
alignment = 1
script = ExtResource("1_6rypn")

[node name="HealthImage" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_hdb0t")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "88"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxHealthLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "/88"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 3)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_fht25")
value = 50.0
show_percentage = false
